# ESNODE-Core

./: .gitignore  AIOPS_IMPLEMENTATION_SUMMARY.md  BRANDING_UPDATE_SUMMARY.md  CHANGELOG.md  CODE_QUALITY_REPORT.md  Cargo.toml  ENTERPRISE_CERTIFICATION.md  ENTERPRISE_READINESS.md  ENTERPRISE_READINESS_REPORT_20260209_004228.txt  ENTERPRISE_READINESS_REPORT_20260209_014851.txt  ENTERPRISE_TRANSFORMATION_SUMMARY.md  FINAL_VALIDATION_REPORT.md  PRODUCTION_QUALITY_VERIFICATION.md  PRODUCT_CAPABILITIES.md  README.md  RELEASE_DEPLOYMENT_SUMMARY.md  SECURITY.md  TUI_TESTING_REPORT.md  sample-profile.yaml
.github/workflows/: ci.yml
ESNODE-Orchestrator/: README.md
ESNODE-Orchestrator/src/: lib.rs
ESNODE-Orchestrator/src/features/: mod.rs  thermal.rs
ESNODE-Orchestrator/tests/: thermal_tests.rs
crates/agent-bin/: Cargo.toml
crates/agent-bin/src/: client.rs  console.rs  main.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: config.rs  control.rs  drivers.rs  http.rs  lib.rs  metrics.rs  nvml_ext.rs  policy.rs  predictive.rs  rca.rs  state.rs  telemetry.rs  tsdb.rs
crates/agent-core/src/collectors/: app.rs  cpu.rs  disk.rs  ebpf.rs  gpu.rs  memory.rs  mod.rs  network.rs  numa.rs  power.rs  protocol_runner.rs  pue.rs
crates/agent-core/tests/: config_overrides.rs  policy_tests.rs
crates/esnode-dnp3/: Cargo.toml
crates/esnode-dnp3/src/: lib.rs
crates/esnode-modbus/: Cargo.toml
crates/esnode-modbus/src/: lib.rs
crates/esnode-mqtt/: Cargo.toml  README.md
crates/esnode-mqtt/src/: lib.rs
crates/esnode-snmp/: Cargo.toml
crates/esnode-snmp/src/: lib.rs
dashboards/: esnode-facility-monitoring.json
deploy/k8s/: daemonset.yaml
deploy/systemd/: esnode-core.service
docs/: BRAND_GUIDELINES.md  ENTERPRISE_DEPLOYMENT.md  INSTALL.md  PROFILES_SPEC.md  TUI_USER_GUIDE.md  architecture.md  build-packages.md  metrics-list.md  monitoring-examples.md  platform-matrix.md  quickstart.md  support-policy.md
docs/marketing/: CAMPAIGN_GUIDE.md  README.md
examples/datacenter/: QUICKSTART_MQTT.md  esnode.toml
public/: install.sh
scripts/: build-enterprise.sh  build-release.sh  install.sh  package-enterprise.sh  validate-enterprise.sh
