[package]
name = "esnode-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
rustls = "0.22.4"
rustls-native-certs = "0.7"
rustls-pemfile = "2.1"

agent-core = { path = "../agent-core" }

[dev-dependencies]
tokio-test = "0.4"
